Fixes bad wrapping in list of hearts when heart names contains alot of characters

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -19,9 +19,13 @@ h2 a:hover {
 	color: black;
 }
 
+.nowrap {
+	white-space: nowrap;
+}
 
-
-
+th {
+	white-space: nowrap;
+}
 
 
 
